2007-01-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34658
	* gfortran.dg/common_11.f90: New.
	* gfortran.dg/blockdata_1.f90: Update test case.
	* gfortran.dg/blockdata_2.f90: Update test case.

2008-01-06  Tobias Burnus  <burnus@net-b.de>

	* gfortran.dg/equiv_constraint_9.f90: Fix typo.

2008-01-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34655
	* gfortran.dg/equiv_constraint_9.f90: New.

2008-01-06  Revital Eres  <eres@il.ibm.com>

	PR tree-optimization/34263
	* gcc.dg/pr34263.c:  New testcase.

2008-01-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34654
	* gfortran.dg/internal_io_unf.f90: New.

2008-01-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34660
	* gfortran.dg/elemental_args_check_2.f90: New.

2008-01-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34662
	* gfortran.dg/intent_out_3.f90: New.

2008-01-05  Richard Sandiford  <rsandifo@nildram.co.uk>

	* objc.dg/stabs-1.m: Allow labels to be begin with $L as well as .L.

2008-01-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/34676
	* gfortran.dg/list_read_8.f90: New test.

2008-01-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34029
	* gcc.c-torture/compile/pr34029-1.c: New testcase.
	* gcc.c-torture/compile/pr34029-2.c: Likewise.

2008-01-04  Jakub Jelinek  <jakub@redhat.com>

	PR gcov-profile/34609
	* g++.dg/gcov/gcov-6.C: New test.

2008-01-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/31081
	* g++.dg/torture/pr31081-1.C: New testcase.
	* g++.dg/torture/pr31081-2.C: Likewise.

2008-01-04  Richard Sandiford  <rsandifo@nildram.co.uk>

	* gcc.target/mips/rsqrt-1.c: Require -mgp64.
	* gcc.target/mips/rsqrt-2.c: Likewise.
	* gcc.target/mips/rsqrt-4.c: New test.

2008-01-04  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34557
	* gfortran.dg/equiv_substr.f90: New.

2008-01-03  Tom Tromey  <tromey@redhat.com>

	PR c/34457:
	* gcc.dg/pr34457-2.c: New file.
	* gcc.dg/pr34457-1.c: New file.

2008-01-03  Sebastian Pop  <sebastian.pop@amd.com>
